--- a/spa/package.json
+++ b/spa/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "eslint-config-peerigon": "^11.2.0",
+    "express": "^4.15.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   },
@@ -18,13 +20,13 @@
     "chalk": "1.1.3",
     "css-loader": "0.28.1",
     "dotenv": "4.0.0",
-    "eslint": "3.19.0",
+    "eslint": "3",
     "eslint-config-react-app": "^1.0.4",
     "eslint-loader": "1.7.1",
     "eslint-plugin-flowtype": "2.33.0",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "5.0.3",
-    "eslint-plugin-react": "7.0.1",
+    "eslint-plugin-react": "^7.1.0",
     "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "0.11.1",
     "fs-extra": "3.0.1",
@@ -78,8 +80,5 @@
     "presets": [
       "react-app"
     ]
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   }
 }
