--- a/spa/package.json
+++ b/spa/package.json
@@ -2,25 +2,44 @@
   "name": "spa",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "dev": "run-p server:dev client:dev",
+    "client:dev": "cross-env NODE_ENV=development node scripts/start.js",
+    "client:build": "node scripts/build.js",
+    "client:test": "node scripts/test.js --env=jsdom",
+    "server:dev": "cross-env NODE_ENV=development nodemon -w src --exec \"babel-node server\"",
+    "server:build": "babel src -s -D -d dist --presets es2015,stage-0",
+    "server:start": "node dist"
+  },
   "dependencies": {
-    "eslint-config-peerigon": "^11.2.0",
+    "body-parser": "^1.17.2",
+    "compression": "^1.6.2",
+    "cors": "^2.8.3",
     "express": "^4.15.3",
+    "morgan": "^1.8.2",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "resource-router-middleware": "^0.7.0"
   },
   "devDependencies": {
     "autoprefixer": "7.1.0",
-    "babel-core": "6.24.1",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-react-app": "^3.0.0",
-    "babel-runtime": "6.23.0",
+    "babel-runtime": "^6.23.0",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
+    "cross-env": "^5.0.1",
     "css-loader": "0.28.1",
     "dotenv": "4.0.0",
     "eslint": "3",
+    "eslint-config-peerigon": "^11.2.0",
     "eslint-config-react-app": "^1.0.4",
     "eslint-loader": "1.7.1",
     "eslint-plugin-flowtype": "2.33.0",
@@ -32,6 +51,8 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.28.0",
     "jest": "20.0.3",
+    "nodemon": "^1.11.0",
+    "npm-run-all": "^4.0.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-loader": "2.0.5",
@@ -46,11 +67,7 @@
     "webpack-manifest-plugin": "1.1.0",
     "whatwg-fetch": "2.0.3"
   },
-  "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
-  },
+  "proxy": "http://localhost:8080",
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}"
@@ -59,8 +76,8 @@
       "<rootDir>/config/polyfills.js"
     ],
     "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.js?(x)",
-      "<rootDir>/src/**/?(*.)(spec|test).js?(x)"
+      "<rootDir>/client/**/__tests__/**/*.js?(x)",
+      "<rootDir>/client/**/?(*.)(spec|test).js?(x)"
     ],
     "testEnvironment": "node",
     "testURL": "http://localhost",
@@ -75,10 +92,5 @@
     "moduleNameMapper": {
       "^react-native$": "react-native-web"
     }
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
   }
 }
