--- a/spa/.babelrc
+++ b/spa/.babelrc
@@ -1,6 +1,6 @@
 {
     "env": {
-        "node": {
+        "development": {
             "presets": [
                 [
                     "env",
