--- a/spa/package.json
+++ b/spa/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "run-p server:dev client:dev",
-    "client:dev": "cross-env NODE_ENV=development BABEL_ENV=browser node scripts/start.js",
+    "client:dev": "cross-env NODE_ENV=development nodemon -w config --exec \"webpack-dev-server --config config/webpack.config.babel.js\"",
     "client:build": "node scripts/build.js",
     "client:test": "node scripts/test.js --env=jsdom",
-    "server:dev": "cross-env NODE_ENV=development BABEL_ENV=node nodemon -w server --exec \"babel-node server\"",
+    "server:dev": "cross-env NODE_ENV=development nodemon -w server --exec \"babel-node server\"",
     "server:build": "babel server -s -D -d dist/server",
     "server:start": "node dist",
     "lib:build": "babel lib -s -D -d dist/lib"
@@ -28,75 +28,39 @@
     "resource-router-middleware": "^0.7.0"
   },
   "devDependencies": {
-    "autoprefixer": "7.1.0",
+    "autoprefixer": "^7.1.1",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-eslint": "7.2.3",
-    "babel-jest": "20.0.3",
-    "babel-loader": "7.0.0",
+    "babel-loader": "^7.1.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-react-app": "^3.0.0",
+    "babel-register": "^6.24.1",
     "babel-runtime": "^6.23.0",
-    "case-sensitive-paths-webpack-plugin": "1.1.4",
-    "chalk": "1.1.3",
     "cross-env": "^5.0.1",
-    "css-loader": "0.28.1",
-    "dotenv": "4.0.0",
-    "eslint": "3",
+    "css-loader": "^0.28.4",
+    "eslint": "^4.0.0",
     "eslint-config-peerigon": "^11.2.0",
-    "eslint-config-react-app": "^1.0.4",
-    "eslint-loader": "1.7.1",
-    "eslint-plugin-flowtype": "2.33.0",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "5.0.3",
+    "eslint-loader": "^1.8.0",
+    "eslint-plugin-flowtype": "^2.34.0",
+    "eslint-plugin-import": "^2.5.0",
     "eslint-plugin-react": "^7.1.0",
-    "extract-text-webpack-plugin": "2.1.0",
-    "file-loader": "0.11.1",
-    "fs-extra": "3.0.1",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.11.2",
     "html-webpack-plugin": "2.28.0",
-    "jest": "20.0.3",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
     "object-assign": "4.1.1",
-    "postcss-flexbugs-fixes": "3.0.0",
-    "postcss-loader": "2.0.5",
-    "promise": "7.1.1",
-    "react-dev-utils": "^3.0.0",
-    "react-error-overlay": "^1.0.7",
-    "style-loader": "0.17.0",
-    "sw-precache-webpack-plugin": "0.9.1",
-    "url-loader": "0.5.8",
-    "webpack": "2.6.1",
-    "webpack-dev-server": "2.4.5",
+    "postcss-loader": "^2.0.6",
+    "promise": "^8.0.0",
+    "style-loader": "^0.18.2",
+    "sw-precache-webpack-plugin": "^0.11.3",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.0.0",
+    "webpack-dev-server": "^2.5.0",
     "webpack-manifest-plugin": "1.1.0",
     "whatwg-fetch": "2.0.3"
-  },
-  "proxy": "http://localhost:8080",
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx}"
-    ],
-    "setupFiles": [
-      "<rootDir>/config/polyfills.js"
-    ],
-    "testMatch": [
-      "<rootDir>/client/**/__tests__/**/*.js?(x)",
-      "<rootDir>/client/**/?(*.)(spec|test).js?(x)"
-    ],
-    "testEnvironment": "node",
-    "testURL": "http://localhost",
-    "transform": {
-      "^.+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web"
-    }
   }
 }
