Add working state after refactoring build tools

--- a/spa/package.json
+++ b/spa/package.json
@@ -23,9 +23,12 @@
     "helmet": "^3.6.1",
     "mock-rest-middleware": "^2.3.0",
     "morgan": "^1.8.2",
+    "object-assign": "^4.1.1",
+    "promise": "^8.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "resource-router-middleware": "^0.7.0"
+    "resource-router-middleware": "^0.7.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.1",
@@ -52,15 +55,12 @@
     "html-webpack-plugin": "2.28.0",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
-    "object-assign": "4.1.1",
     "postcss-loader": "^2.0.6",
-    "promise": "^8.0.0",
     "style-loader": "^0.18.2",
     "sw-precache-webpack-plugin": "^0.11.3",
     "url-loader": "^0.5.9",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0",
-    "webpack-manifest-plugin": "1.1.0",
-    "whatwg-fetch": "2.0.3"
+    "webpack-manifest-plugin": "1.1.0"
   }
 }
