--- a/spa/.babelrc
+++ b/spa/.babelrc
@@ -28,7 +28,9 @@
             ],
             "plugins": [
                 "transform-runtime",
-                "transform-object-rest-spread"
+                "transform-object-rest-spread",
+                "transform-react-inline-elements",
+                "transform-react-constant-elements"
             ],
             "retainLines": true
         }
