--- a/spa/package.json
+++ b/spa/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "run-p server:dev client:dev",
     "client:dev": "cross-env NODE_ENV=development nodemon -w config --exec \"webpack-dev-server --config config/webpack.config.babel.js\"",
-    "client:build": "node scripts/build.js",
-    "client:test": "node scripts/test.js --env=jsdom",
+    "client:build": "webpack --config config/webpack.config.babel.js",
     "server:dev": "cross-env NODE_ENV=development nodemon -w server --exec \"babel-node server\"",
     "server:build": "babel server -s -D -d dist/server",
     "server:start": "node dist",
@@ -14,22 +13,6 @@
   },
   "dependencies": {
     "alamid-schema": "^1.1.0",
-    "body-parser": "^1.17.2",
-    "compression": "^1.6.2",
-    "cors": "^2.8.3",
-    "cxs": "^3.0.4",
-    "express": "^4.15.3",
-    "faker": "^4.1.0",
-    "filled-array": "^1.1.0",
-    "helmet": "^3.6.1",
-    "mock-rest-middleware": "^2.3.0",
-    "morgan": "^1.8.2",
-    "object-assign": "^4.1.1",
-    "promise": "^8.0.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "resource-router-middleware": "^0.7.0",
-    "whatwg-fetch": "^2.0.3",
     "autoprefixer": "^7.1.1",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
@@ -43,8 +26,14 @@
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.24.1",
     "babel-runtime": "^6.23.0",
+    "body-parser": "^1.17.2",
+    "clean-webpack-plugin": "^0.1.16",
+    "compression": "^1.6.2",
+    "copy-webpack-plugin": "^4.0.1",
+    "cors": "^2.8.3",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
+    "cxs": "^3.0.4",
     "eslint": "^4.0.0",
     "eslint-config-peerigon": "^11.2.0",
     "eslint-loader": "^1.8.0",
@@ -52,19 +41,31 @@
     "eslint-plugin-import": "^2.5.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.1.0",
+    "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.2",
+    "faker": "^4.1.0",
     "file-loader": "^0.11.2",
+    "filled-array": "^1.1.0",
+    "helmet": "^3.6.1",
     "html-webpack-plugin": "2.28.0",
     "kewler": "^1.0.8",
+    "mock-rest-middleware": "^2.3.0",
     "modular-scale": "^4.4.1",
+    "morgan": "^1.8.2",
     "npm-run-all": "^4.0.2",
+    "object-assign": "^4.1.1",
     "postcss-loader": "^2.0.6",
+    "promise": "^8.0.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "resource-router-middleware": "^0.7.0",
     "style-loader": "^0.18.2",
     "sw-precache-webpack-plugin": "^0.11.3",
     "url-loader": "^0.5.9",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0",
-    "webpack-manifest-plugin": "1.1.0"
+    "webpack-manifest-plugin": "1.1.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
