--- a/spa/package.json
+++ b/spa/package.json
@@ -63,6 +63,7 @@
     "sw-precache-webpack-plugin": "^0.11.3",
     "url-loader": "^0.5.9",
     "webpack": "^3.0.0",
+    "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dev-server": "^2.5.0",
     "webpack-manifest-plugin": "1.1.0",
     "whatwg-fetch": "^2.0.3"
