--- a/spa/package.json
+++ b/spa/package.json
@@ -21,9 +21,9 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
     "babel-plugin-transform-react-inline-elements": "^6.22.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.5.2",
-    "babel-preset-react": "^6.24.1",
     "babel-register": "^6.24.1",
     "babel-runtime": "^6.23.0",
     "body-parser": "^1.17.2",
@@ -34,13 +34,6 @@
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "cxs": "^3.0.4",
-    "eslint": "^4.0.0",
-    "eslint-config-peerigon": "^11.2.0",
-    "eslint-loader": "^1.8.0",
-    "eslint-plugin-flowtype": "^2.34.0",
-    "eslint-plugin-import": "^2.5.0",
-    "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-react": "^7.1.0",
     "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.2",
     "faker": "^4.1.0",
@@ -67,7 +60,14 @@
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
+    "eslint-config-peerigon": "^11.3.0",
     "eslint-import-resolver-webpack": "^0.8.3",
-    "nodemon": "^1.11.0"
-  }
+    "nodemon": "^1.11.0",
+    "eslint": "^4.0.0",
+    "eslint-plugin-flowtype": "^2.34.0",
+    "eslint-plugin-import": "^2.5.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.1.0"
+  },
+  "false": {}
 }
