--- a/spa/package.json
+++ b/spa/package.json
@@ -35,6 +35,7 @@
     "css-loader": "^0.28.4",
     "cxs": "^3.0.4",
     "express": "^4.15.3",
+    "extract-loader": "^0.1.0",
     "extract-text-webpack-plugin": "^2.1.2",
     "faker": "^4.1.0",
     "file-loader": "^0.11.2",
@@ -49,6 +50,7 @@
     "postcss-loader": "^2.0.6",
     "preact": "^8.1.0",
     "preact-compat": "^3.16.0",
+    "resolve-from": "^3.0.0",
     "resource-router-middleware": "^0.7.0",
     "style-loader": "^0.18.2",
     "sw-precache-webpack-plugin": "^0.11.3",
