--- a/spa/client/.eslintrc.json
+++ b/spa/client/.eslintrc.json
@@ -21,6 +21,7 @@
         // So, we don't use stateless functions in this SPA example to avoid unnecessary refactoring.
         // Currently, they provide not performance benefit anyway.
         "react/prefer-stateless-function": "off",
-        "class-methods-use-this": "off"
+        "class-methods-use-this": "off",
+        "no-mixed-operators": "off"
     }
 }
