--- a/spa/package.json
+++ b/spa/package.json
@@ -54,12 +54,12 @@
     "resource-router-middleware": "^0.7.0",
     "style-loader": "^0.18.2",
     "sw-precache-webpack-plugin": "^0.11.3",
+    "unfetch": "^2.1.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.0.0",
     "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dev-server": "^2.5.0",
-    "webpack-manifest-plugin": "1.1.0",
-    "whatwg-fetch": "^2.0.3"
+    "webpack-manifest-plugin": "1.1.0"
   },
   "devDependencies": {
     "eslint-config-peerigon": "^11.3.0",
