--- a/spa/package.json
+++ b/spa/package.json
@@ -18,6 +18,7 @@
     "babel-core": "^6.25.0",
     "babel-eslint": "7.2.3",
     "babel-loader": "^7.1.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
     "babel-plugin-transform-react-inline-elements": "^6.22.0",
@@ -50,8 +51,10 @@
     "postcss-loader": "^2.0.6",
     "preact": "^8.1.0",
     "preact-compat": "^3.16.0",
+    "prop-types": "^15.5.10",
     "resolve-from": "^3.0.0",
     "resource-router-middleware": "^0.7.0",
+    "sheet-router": "^4.2.3",
     "style-loader": "^0.18.2",
     "sw-precache-webpack-plugin": "^0.11.3",
     "unfetch": "^2.1.2",
@@ -62,14 +65,14 @@
     "webpack-manifest-plugin": "1.1.0"
   },
   "devDependencies": {
-    "eslint-config-peerigon": "^11.3.0",
-    "eslint-import-resolver-webpack": "^0.8.3",
-    "nodemon": "^1.11.0",
     "eslint": "^4.0.0",
+    "eslint-config-peerigon": "^11.3.1",
+    "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-plugin-flowtype": "^2.34.0",
     "eslint-plugin-import": "^2.5.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-react": "^7.1.0"
+    "eslint-plugin-react": "^7.1.0",
+    "nodemon": "^1.11.0"
   },
   "false": {}
 }
