--- a/spa/package.json
+++ b/spa/package.json
@@ -52,11 +52,14 @@
     "preact": "^8.1.0",
     "preact-compat": "^3.16.0",
     "prop-types": "^15.5.10",
+    "readable-regex": "^1.0.0",
     "resolve-from": "^3.0.0",
     "resource-router-middleware": "^0.7.0",
     "sheet-router": "^4.2.3",
     "style-loader": "^0.18.2",
     "sw-precache-webpack-plugin": "^0.11.3",
+    "transform-loader": "^0.2.4",
+    "unassertify": "^2.0.4",
     "unfetch": "^2.1.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.0.0",
