--- a/spa/package.json
+++ b/spa/package.json
@@ -18,6 +18,7 @@
     "babel-core": "^6.25.0",
     "babel-eslint": "7.2.3",
     "babel-loader": "^7.1.0",
+    "babel-plugin-dynamic-import-node": "^1.0.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
