--- a/spa/package.json
+++ b/spa/package.json
@@ -63,6 +63,7 @@
     "unassertify": "^2.0.4",
     "unfetch": "^2.1.2",
     "url-loader": "^0.5.9",
+    "url-search-params": "^0.9.0",
     "webpack": "^3.0.0",
     "webpack-bundle-analyzer": "^2.8.2",
     "webpack-dev-server": "^2.5.0",
