--- a/spa/package.json
+++ b/spa/package.json
@@ -52,6 +52,7 @@
     "postcss-loader": "^2.0.6",
     "preact": "^8.1.0",
     "preact-compat": "^3.16.0",
+    "preload-webpack-plugin": "^1.2.2",
     "prop-types": "^15.5.10",
     "readable-regex": "^1.0.0",
     "resolve-from": "^3.0.0",
