--- a/spa/package.json
+++ b/spa/package.json
@@ -48,6 +48,7 @@
     "merge-files-webpack-plugin": "^1.1.2",
     "mock-rest-middleware": "^2.3.0",
     "modular-scale": "^4.4.1",
+    "moment": "^2.18.1",
     "morgan": "^1.8.2",
     "npm-run-all": "^4.0.2",
     "postcss-loader": "^2.0.6",
