--- a/spa/package.json
+++ b/spa/package.json
@@ -42,13 +42,13 @@
     "faker": "^4.1.0",
     "file-loader": "^0.11.2",
     "filled-array": "^1.1.0",
+    "from-now": "^1.0.2",
     "helmet": "^3.6.1",
     "html-webpack-plugin": "2.28.0",
     "kewler": "^1.0.8",
     "merge-files-webpack-plugin": "^1.1.2",
     "mock-rest-middleware": "^2.3.0",
     "modular-scale": "^4.4.1",
-    "moment": "^2.18.1",
     "morgan": "^1.8.2",
     "npm-run-all": "^4.0.2",
     "postcss-loader": "^2.0.6",
