--- a/spa/package.json
+++ b/spa/package.json
@@ -45,6 +45,7 @@
     "from-now": "^1.0.2",
     "helmet": "^3.6.1",
     "html-webpack-plugin": "2.28.0",
+    "image-webpack-loader": "^3.3.1",
     "kewler": "^1.0.8",
     "merge-files-webpack-plugin": "^1.1.2",
     "mock-rest-middleware": "^2.3.0",
