--- a/spa/package.json
+++ b/spa/package.json
@@ -51,6 +51,9 @@
     "mock-rest-middleware": "^2.3.0",
     "modular-scale": "^4.4.1",
     "morgan": "^1.8.2",
+    "nanohistory": "^1.0.0",
+    "nanohref": "^1.0.0",
+    "nanorouter": "^2.1.0",
     "npm-run-all": "^4.0.2",
     "postcss-loader": "^2.0.6",
     "preact": "^8.1.0",
@@ -59,7 +62,6 @@
     "readable-regex": "^1.0.0",
     "resolve-from": "^3.0.0",
     "resource-router-middleware": "^0.7.0",
-    "sheet-router": "^4.2.3",
     "style-loader": "^0.18.2",
     "sw-precache-webpack-plugin": "^0.11.3",
     "transform-loader": "^0.2.4",
