--- a/spa/.eslintrc.json
+++ b/spa/.eslintrc.json
@@ -5,5 +5,8 @@
     "env": {
         "node": true
     },
-    "root": true
+    "root": true,
+    "rules": {
+        "no-mixed-operators": "off"
+    }
 }
