Fix wrong eslint rule override

--- a/spa/client/.eslintrc.json
+++ b/spa/client/.eslintrc.json
@@ -25,7 +25,9 @@
         "react/no-unknown-property": [
             "error",
             {
-                "ignore": "class"
+                "ignore": [
+                    "class"
+                ]
             }
         ]
     }
