--- a/spa/package.json
+++ b/spa/package.json
@@ -22,20 +22,16 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
-    "babel-plugin-transform-react-inline-elements": "^6.22.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.5.2",
-    "babel-register": "^6.24.1",
     "babel-runtime": "^6.23.0",
     "body-parser": "^1.17.2",
     "clean-webpack-plugin": "^0.1.16",
-    "compression": "^1.6.2",
     "copy-webpack-plugin": "^4.0.1",
     "cors": "^2.8.3",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
-    "cxs": "^3.0.4",
     "express": "^4.15.3",
     "extract-loader": "^0.1.0",
     "extract-text-webpack-plugin": "^2.1.2",
@@ -43,6 +39,7 @@
     "file-loader": "^0.11.2",
     "filled-array": "^1.1.0",
     "from-now": "^1.0.2",
+    "glamor": "^2.20.25",
     "helmet": "^3.6.1",
     "html-webpack-plugin": "2.28.0",
     "image-webpack-loader": "^3.3.1",
@@ -59,7 +56,6 @@
     "preact": "^8.1.0",
     "prop-types": "^15.5.10",
     "readable-regex": "^1.0.0",
-    "resolve-from": "^3.0.0",
     "resource-router-middleware": "^0.7.0",
     "style-loader": "^0.18.2",
     "sw-precache-webpack-plugin": "^0.11.3",
@@ -82,6 +78,5 @@
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.1.0",
     "nodemon": "^1.11.0"
-  },
-  "false": {}
+  }
 }
