--- a/spa/package.json
+++ b/spa/package.json
@@ -27,6 +27,9 @@
     "babel-runtime": "^6.23.0",
     "body-parser": "^1.17.2",
     "clean-webpack-plugin": "^0.1.16",
+    "compression": "^1.6.2",
+    "compression-webpack-plugin": "^0.4.0",
+    "connect-gzip-static": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "cors": "^2.8.3",
     "cross-env": "^5.0.1",
