--- a/spa/package.json
+++ b/spa/package.json
@@ -46,6 +46,7 @@
     "hex-to-rgba": "^0.2.0",
     "html-webpack-plugin": "2.28.0",
     "image-webpack-loader": "^3.3.1",
+    "jsonwebtoken": "^7.4.1",
     "kewler": "^1.0.8",
     "merge-files-webpack-plugin": "^1.1.2",
     "mock-rest-middleware": "^2.3.0",
@@ -55,6 +56,8 @@
     "nanohref": "^1.0.0",
     "nanorouter": "^2.1.0",
     "npm-run-all": "^4.0.2",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
     "postcss-loader": "^2.0.6",
     "preact": "^8.1.0",
     "prop-types": "^15.5.10",
