First shot of universal rendering (work in progress)

--- a/universal/package.json
+++ b/universal/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "app:client:dev": "cross-env WEBPACK_ENV=development WEBPACK_TARGET=web nodemon -w config --exec \"webpack-dev-server --config config/webpack.config.babel.js\"",
+    "app:client:dev": "cross-env WEBPACK_ENV=development WEBPACK_TARGET=browser nodemon -w config --exec \"webpack-dev-server --config config/webpack.config.babel.js\"",
     "app:server:dev": "cross-env WEBPACK_ENV=development WEBPACK_TARGET=node nodemon -w config --exec \"webpack --config config/webpack.config.babel.js\"",
     "app:dev": "run-p app:client:dev app:server:dev",
     "server:dev": "cross-env NODE_ENV=development nodemon -w server --exec \"babel-node server\"",
     "dev": "run-p server:dev app:dev",
-    "app:client:build": "cross-env WEBPACK_TARGET=web webpack --config config/webpack.config.babel.js\"",
+    "app:client:build": "cross-env WEBPACK_TARGET=browser webpack --config config/webpack.config.babel.js\"",
     "app:server:build": "cross-env WEBPACK_TARGET=node webpack --config config/webpack.config.babel.js\"",
     "app:build": "run-p app:client:build app:server:build",
     "server:build": "babel server -s -D -d dist",
@@ -17,8 +17,21 @@
     "start": "cross-env WEBPACK_ENV=production run-s build server:start"
   },
   "dependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-dynamic-import-node": "^1.0.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-react-constant-elements": "^6.23.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.5.2",
     "body-parser": "^1.17.2",
+    "clean-webpack-plugin": "^0.1.16",
     "compression": "^1.6.2",
+    "compression-webpack-plugin": "^0.4.0",
     "connect-gzip-static": "^2.0.1",
     "cors": "^2.8.3",
     "express": "^4.15.3",
@@ -27,7 +40,12 @@
     "mock-rest-middleware": "^2.3.0",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
-    "passport-jwt": "^2.2.1"
+    "passport-jwt": "^2.2.1",
+    "preact": "^8.1.0",
+    "preact-render-to-string": "^3.6.3",
+    "readable-regex": "^1.0.0",
+    "webpack": "^3.0.0",
+    "webpack-bundle-analyzer": "^2.8.2"
   },
   "devDependencies": {
     "eslint": "^4.0.0",
