--- a/universal/package.json
+++ b/universal/package.json
@@ -45,7 +45,8 @@
     "preact-render-to-string": "^3.6.3",
     "readable-regex": "^1.0.0",
     "webpack": "^3.0.0",
-    "webpack-bundle-analyzer": "^2.8.2"
+    "webpack-bundle-analyzer": "^2.8.2",
+    "webpack-node-externals": "^1.6.0"
   },
   "devDependencies": {
     "eslint": "^4.0.0",
