--- a/spa/package.json
+++ b/spa/package.json
@@ -72,7 +72,6 @@
     "url-search-params": "^0.9.0",
     "webpack": "^3.0.0",
     "webpack-bundle-analyzer": "^2.8.2",
-    "webpack-dev-server": "^2.5.0",
     "webpack-manifest-plugin": "1.1.0"
   },
   "devDependencies": {
@@ -83,6 +82,7 @@
     "eslint-plugin-import": "^2.5.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.1.0",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "webpack-dev-server": "^2.5.0"
   }
 }
