--- a/universal/package.json
+++ b/universal/package.json
@@ -8,13 +8,18 @@
     "app:dev": "run-p app:client:dev app:server:dev",
     "server:dev": "cross-env NODE_ENV=development nodemon -w server --exec \"babel-node server\"",
     "dev": "run-p server:dev app:dev",
+    "app:client:cleanup": "rimraf dist/public/**",
+    "app:server:cleanup": "rimraf dist/app/**",
+    "server:cleanup": "rimraf dist/server/**",
+    "cleanup": "run-p app:client:cleanup app:server:cleanup server:cleanup",
     "app:client:build": "cross-env WEBPACK_TARGET=browser webpack --config config/webpack.config.babel.js",
     "app:server:build": "cross-env WEBPACK_TARGET=node webpack --config config/webpack.config.babel.js",
     "app:build": "run-p app:client:build app:server:build",
-    "server:build": "babel server -s -D -d dist",
+    "server:build": "babel server -s -D -d dist/server",
     "build": "run-p app:build server:build",
-    "server:start": "cross-env NODE_ENV=production node dist",
-    "start": "cross-env WEBPACK_ENV=production run-s build server:start"
+    "cleanup-build": "run-s cleanup build",
+    "server:start": "cross-env NODE_ENV=production node dist/server",
+    "start": "cross-env WEBPACK_ENV=production run-s cleanup-build server:start"
   },
   "dependencies": {
     "babel-cli": "^6.24.1",
@@ -29,7 +34,6 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.5.2",
     "body-parser": "^1.17.2",
-    "clean-webpack-plugin": "^0.1.16",
     "compression": "^1.6.2",
     "compression-webpack-plugin": "^0.4.0",
     "connect-gzip-static": "^2.0.1",
@@ -40,12 +44,13 @@
     "jsonwebtoken": "^7.4.1",
     "mock-rest-middleware": "^2.3.0",
     "morgan": "^1.8.2",
+    "npm-run-all": "^4.0.2",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "preact": "^8.1.0",
     "preact-render-to-string": "^3.6.3",
     "readable-regex": "^1.0.0",
-    "run-p": "0.0.0",
+    "rimraf": "^2.6.1",
     "webpack": "^3.0.0",
     "webpack-bundle-analyzer": "^2.8.2",
     "webpack-node-externals": "^1.6.0"
