--- a/universal/package.json
+++ b/universal/package.json
@@ -39,7 +39,9 @@
     "connect-gzip-static": "^2.0.1",
     "cors": "^2.8.3",
     "cross-env": "^5.0.1",
+    "ejs-compiled-loader": "^1.1.0",
     "express": "^4.15.3",
+    "extract-text-webpack-plugin": "^2.1.2",
     "helmet": "^3.6.1",
     "jsonwebtoken": "^7.4.1",
     "mock-rest-middleware": "^2.3.0",
@@ -51,6 +53,8 @@
     "preact-render-to-string": "^3.6.3",
     "readable-regex": "^1.0.0",
     "rimraf": "^2.6.1",
+    "stats-webpack-plugin": "^0.6.1",
+    "stream-template": "0.0.4",
     "webpack": "^3.0.0",
     "webpack-bundle-analyzer": "^2.8.2",
     "webpack-node-externals": "^1.6.0"
