Add first App component

--- a/universal/package.json
+++ b/universal/package.json
@@ -39,11 +39,12 @@
     "connect-gzip-static": "^2.0.1",
     "cors": "^2.8.3",
     "cross-env": "^5.0.1",
-    "ejs-compiled-loader": "^1.1.0",
     "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.2",
+    "glamor": "^3.0.0-2",
     "helmet": "^3.6.1",
     "jsonwebtoken": "^7.4.1",
+    "kewler": "^1.0.8",
     "mock-rest-middleware": "^2.3.0",
     "morgan": "^1.8.2",
     "npm-run-all": "^4.0.2",
