--- a/universal/package.json
+++ b/universal/package.json
@@ -37,6 +37,7 @@
     "compression": "^1.6.2",
     "compression-webpack-plugin": "^0.4.0",
     "connect-gzip-static": "^2.0.1",
+    "copy-webpack-plugin": "^4.0.1",
     "cors": "^2.8.3",
     "cross-env": "^5.0.1",
     "express": "^4.15.3",
