--- a/universal/package.json
+++ b/universal/package.json
@@ -40,6 +40,7 @@
     "copy-webpack-plugin": "^4.0.1",
     "cors": "^2.8.3",
     "cross-env": "^5.0.1",
+    "css-loader": "^0.28.4",
     "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.2",
     "glamor": "^3.0.0-2",
