--- a/universal/package.json
+++ b/universal/package.json
@@ -43,6 +43,7 @@
     "css-loader": "^0.28.4",
     "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.11.2",
     "glamor": "^3.0.0-2",
     "glamor-server": "^3.0.0-2",
     "helmet": "^3.6.1",
@@ -59,6 +60,7 @@
     "rimraf": "^2.6.1",
     "stats-webpack-plugin": "^0.6.1",
     "stream-template": "0.0.4",
+    "url-loader": "^0.5.9",
     "webpack": "^3.0.0",
     "webpack-bundle-analyzer": "^2.8.2",
     "webpack-node-externals": "^1.6.0"
