Add missing image-webpack-loader

--- a/universal/package.json
+++ b/universal/package.json
@@ -47,6 +47,7 @@
     "glamor": "^3.0.0-2",
     "glamor-server": "^3.0.0-2",
     "helmet": "^3.6.1",
+    "image-webpack-loader": "^3.3.1",
     "jsonwebtoken": "^7.4.1",
     "kewler": "^1.0.8",
     "mock-rest-middleware": "^2.3.0",
