--- a/universal/package.json
+++ b/universal/package.json
@@ -48,10 +48,14 @@
     "glamor-server": "^3.0.0-2",
     "helmet": "^3.6.1",
     "image-webpack-loader": "^3.3.1",
+    "is-promise": "^2.1.0",
     "jsonwebtoken": "^7.4.1",
     "kewler": "^1.0.8",
     "mock-rest-middleware": "^2.3.0",
     "morgan": "^1.8.2",
+    "nanohistory": "^1.0.0",
+    "nanohref": "^3.0.0",
+    "nanorouter": "^2.1.0",
     "npm-run-all": "^4.0.2",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
