--- a/universal/package.json
+++ b/universal/package.json
@@ -63,6 +63,7 @@
     "preact-render-to-string": "^3.6.3",
     "readable-regex": "^1.0.0",
     "redux": "^3.7.1",
+    "redux-logger": "^3.0.6",
     "redux-promise": "^0.5.3",
     "rimraf": "^2.6.1",
     "stats-webpack-plugin": "^0.6.1",
