--- a/universal/package.json
+++ b/universal/package.json
@@ -65,6 +65,7 @@
     "redux": "^3.7.1",
     "redux-logger": "^3.0.6",
     "rimraf": "^2.6.1",
+    "source-map-support": "^0.4.15",
     "stream-template": "0.0.4",
     "url-loader": "^0.5.9",
     "url-search-params": "^0.9.0",
