--- a/universal/package.json
+++ b/universal/package.json
@@ -6,7 +6,7 @@
     "app:client:dev": "cross-env WEBPACK_ENV=development WEBPACK_TARGET=browser nodemon -w config --exec \"webpack-dev-server --config config/webpack.config.babel.js\"",
     "app:server:dev": "cross-env WEBPACK_ENV=development WEBPACK_TARGET=node nodemon -w config --exec \"webpack --config config/webpack.config.babel.js --watch\"",
     "app:dev": "run-p app:client:dev app:server:dev",
-    "server:dev": "cross-env NODE_ENV=development nodemon -w server -w dist/app --exec \"babel-node server\"",
+    "server:dev": "cross-env NODE_ENV=development nodemon -w server -w dist/app --exec \"npm run server:build\"",
     "dev": "run-p server:dev app:dev",
     "app:client:cleanup": "rimraf dist/public/**",
     "app:server:cleanup": "rimraf dist/app/**",
@@ -19,6 +19,7 @@
     "build": "run-p app:build server:build",
     "cleanup-build": "run-s cleanup build",
     "server:start": "node dist/server",
+    "start-dev": "run-p dev server:start",
     "start": "cross-env WEBPACK_ENV=production run-s cleanup-build server:start"
   },
   "dependencies": {
