Improve build and dev scripts

--- a/universal/package.json
+++ b/universal/package.json
@@ -12,8 +12,8 @@
     "app:server:cleanup": "rimraf dist/app/**",
     "server:cleanup": "rimraf dist/server/**",
     "cleanup": "run-p app:client:cleanup app:server:cleanup server:cleanup",
-    "app:client:build": "cross-env WEBPACK_TARGET=browser webpack --config config/webpack.config.babel.js",
-    "app:server:build": "cross-env WEBPACK_TARGET=node webpack --config config/webpack.config.babel.js",
+    "app:client:build": "cross-env WEBPACK_TARGET=browser webpack --config config/webpack.config.babel.js  --display-optimization-bailout",
+    "app:server:build": "cross-env WEBPACK_TARGET=node webpack --config config/webpack.config.babel.js --display-optimization-bailout",
     "app:build": "run-p app:client:build app:server:build",
     "server:build": "babel server -s -D -d dist/server",
     "build": "run-p app:build server:build",
