--- a/universal/package.json
+++ b/universal/package.json
@@ -67,6 +67,7 @@
     "redux-logger": "^3.0.6",
     "rimraf": "^2.6.1",
     "serialize-javascript": "^1.3.0",
+    "shallowequal": "^1.0.2",
     "source-map-support": "^0.4.15",
     "stream-template": "0.0.4",
     "url-loader": "^0.5.9",
