--- a/universal/package.json
+++ b/universal/package.json
@@ -71,6 +71,8 @@
     "shallowequal": "^1.0.2",
     "source-map-support": "^0.4.15",
     "stream-template": "0.0.4",
+    "transform-loader": "^0.2.4",
+    "unassertify": "^2.0.4",
     "url-loader": "^0.5.9",
     "url-search-params": "^0.9.0",
     "webpack": "^3.0.0",
