--- a/universal/package.json
+++ b/universal/package.json
@@ -46,11 +46,13 @@
     "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
+    "from-now": "^1.0.2",
     "glamor": "^3.0.0-2",
     "glamor-server": "^3.0.0-2",
     "helmet": "^3.6.1",
     "image-webpack-loader": "^3.3.1",
     "is-promise": "^2.1.0",
+    "isomorphic-unfetch": "^2.0.0",
     "jsonwebtoken": "^7.4.1",
     "kewler": "^1.0.8",
     "mock-rest-middleware": "^2.3.0",
