--- a/universal/package.json
+++ b/universal/package.json
@@ -60,6 +60,7 @@
     "nanohistory": "^1.0.0",
     "nanohref": "^3.0.0",
     "nanorouter": "^2.1.0",
+    "node-fetch": "^1.7.1",
     "npm-run-all": "^4.0.2",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
@@ -75,6 +76,7 @@
     "stream-template": "0.0.4",
     "transform-loader": "^0.2.4",
     "unassertify": "^2.0.4",
+    "unfetch": "^3.0.0",
     "url-loader": "^0.5.9",
     "url-search-params": "^0.9.0",
     "webpack": "^3.0.0",
