--- a/universal/package.json
+++ b/universal/package.json
@@ -44,6 +44,7 @@
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "express": "^4.15.3",
+    "express-session": "^1.15.3",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
     "from-now": "^1.0.2",
