--- a/universal/package.json
+++ b/universal/package.json
@@ -39,6 +39,7 @@
     "compression": "^1.6.2",
     "compression-webpack-plugin": "^0.4.0",
     "connect-gzip-static": "^2.0.1",
+    "cookie": "^0.3.1",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
