--- a/spa/package.json
+++ b/spa/package.json
@@ -13,76 +13,76 @@
     "start": "cross-env WEBPACK_ENV=production run-s build server:start"
   },
   "dependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-eslint": "7.2.3",
-    "babel-loader": "^7.1.0",
-    "babel-plugin-dynamic-import-node": "^1.0.2",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.5.2",
-    "babel-runtime": "^6.23.0",
-    "body-parser": "^1.17.2",
-    "clean-webpack-plugin": "^0.1.16",
-    "compression": "^1.6.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-runtime": "^6.26.0",
+    "body-parser": "^1.18.2",
+    "clean-webpack-plugin": "^0.1.18",
+    "compression": "^1.7.2",
     "compression-webpack-plugin": "^0.4.0",
-    "connect-gzip-static": "^2.0.1",
-    "copy-webpack-plugin": "^4.0.1",
-    "cors": "^2.8.3",
-    "cross-env": "^5.0.1",
-    "css-loader": "^0.28.4",
-    "express": "^4.15.3",
+    "connect-gzip-static": "^2.1.1",
+    "copy-webpack-plugin": "^4.5.0",
+    "cors": "^2.8.4",
+    "cross-env": "^5.1.3",
+    "css-loader": "^0.28.10",
+    "express": "^4.16.2",
     "extract-loader": "^0.1.0",
     "extract-text-webpack-plugin": "^2.1.2",
     "faker": "^4.1.0",
     "file-loader": "^0.11.2",
     "filled-array": "^1.1.0",
     "from-now": "^1.0.2",
-    "glamor": "^2.20.25",
-    "helmet": "^3.6.1",
+    "glamor": "^2.20.40",
+    "helmet": "^3.12.0",
     "hex-to-rgba": "^0.2.0",
-    "html-webpack-plugin": "2.28.0",
-    "image-webpack-loader": "^3.3.1",
-    "jsonwebtoken": "^7.4.1",
+    "html-webpack-plugin": "^2.30.1",
+    "image-webpack-loader": "^3.6.0",
+    "jsonwebtoken": "^7.4.3",
     "kewler": "^1.0.8",
     "merge-files-webpack-plugin": "^1.1.2",
-    "mock-rest-middleware": "^2.3.0",
+    "mock-rest-middleware": "^2.3.1",
     "modular-scale": "^4.4.1",
-    "morgan": "^1.8.2",
+    "morgan": "^1.9.0",
     "nanohistory": "^1.0.0",
     "nanohref": "^1.0.0",
-    "nanorouter": "^2.1.0",
-    "npm-run-all": "^4.0.2",
+    "nanorouter": "^2.2.0",
+    "npm-run-all": "^4.1.2",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
-    "postcss-loader": "^2.0.6",
-    "preact": "^8.1.0",
-    "prop-types": "^15.5.10",
+    "postcss-loader": "^2.1.1",
+    "preact": "^8.2.7",
+    "prop-types": "^15.6.1",
     "readable-regex": "^1.0.0",
     "resource-router-middleware": "^0.7.0",
     "style-loader": "^0.18.2",
-    "sw-precache-webpack-plugin": "^0.11.3",
+    "sw-precache-webpack-plugin": "^0.11.4",
     "transform-loader": "^0.2.4",
-    "unassertify": "^2.0.4",
+    "unassertify": "^2.1.0",
     "unfetch": "^3.0.0",
     "url-loader": "^0.5.9",
     "url-search-params": "^0.9.0",
-    "webpack": "^3.0.0",
-    "webpack-bundle-analyzer": "^2.8.2",
-    "webpack-manifest-plugin": "1.1.0"
+    "webpack": "^3.11.0",
+    "webpack-bundle-analyzer": "^2.11.1",
+    "webpack-manifest-plugin": "^1.3.2"
   },
   "devDependencies": {
-    "eslint": "^4.0.0",
+    "eslint": "^4.18.2",
     "eslint-config-peerigon": "^11.3.1",
-    "eslint-import-resolver-webpack": "^0.8.3",
-    "eslint-plugin-flowtype": "^2.34.0",
-    "eslint-plugin-import": "^2.5.0",
-    "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-react": "^7.1.0",
-    "nodemon": "^1.11.0",
-    "webpack-dev-server": "^2.5.0"
+    "eslint-import-resolver-webpack": "^0.8.4",
+    "eslint-plugin-flowtype": "^2.46.1",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.7.0",
+    "nodemon": "^1.17.1",
+    "webpack-dev-server": "^2.11.2"
   }
 }
